--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -491,9 +491,9 @@ it would be dangerously ambiguous. So we must not do the same with conditionals.
 	\end{align*}
 So if we were to write:
 	\begin{align*}
-		A \eor B \eand C
+		A \eor B \eand C,
 	\end{align*}
-it would be dangerously ambiguous. \emph{Never write this.} The moral is: you can drop parentheses when dealing with a long list of conjunctions, or when dealing with a long list of disjunctions. But that's it.
+it would be dangerously ambiguous. \emph{Never write this.} (This is the ambiguity discussed in §\ref{StructureAmbiguity}.) The moral is: you can drop parentheses when dealing with a long list of conjunctions, or when dealing with a long list of disjunctions. But that's it.
 
 
 \section{Consistency}
